dist/1.0/bin/sample/retrieveUnpackaged/objects/Reason_of_Delay__c.object
<CustomObject>
    <description>Object used for storing information about Reasons of Delay for Order Lines&apos; provisioning</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full name of Reason of Delay</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Reasons of Delay</relationshipLabel>
        <relationshipName>Reasons_of_Delay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <label>Subgroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Reason of Delay</label>
    <nameField>
        <displayFormat>ROD{000000000}</displayFormat>
        <label>Reason of Delay</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reasons of Delay</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>